<resources>
    <string name="app_name">Água e Gás</string>
    <string name="app_name_commercial">Água &amp; Gás</string>

    <!-- main-activity -->
    <string name="atv_main_aguaegas">Água e Gás.</string>
    <string name="atv_main_simpleserapido">Simples e rápido.</string>
    <string name="atv_main_entrarcomgoogle">Entrar com Google</string>
    <string name="atv_main_sairdoapp">Sair do aplicativo</string>


    <!-- choose_user_type -->
    <string name="iv_choose_user_type">Selecione o tipo de usuário</string>
    <string name="user">Usuário</string>
    <string name="provider">Fornecedor</string>
    <string name="go_back">Voltar</string>

    <!-- customer_chooser_service -->
    <string name="choose_now">Solicitar agora:</string>
    <string name="water">Água</string>
    <string name="gas">Gás</string>
    <string name="logout">Sair da conta</string>
    <string name="close">Fechar app</string>

    <!-- list_water_providers -->
    <string name="search">BUSCAR</string>
    <string name="state">Estado:</string>
    <string name="city">Cidade:</string>
    <string name="distance">Distância:</string>
    <string name="search_detail">Detalhes da busca</string>

    <!-- orders_list -->
    <string name="orders">Pedidos:</string>

    <!-- provider_menu -->
    <string name="settings">Configurações</string>
    <string name="seeFinishedOrders">Ver pedidos finalizados</string>
    <string name="seePendentOrders">Ver pedidos pendentes</string>
    <string name="menuPrincipal">Menu principal</string>
    <string name="refresh">Recarregar</string>

    <!-- Server IP -->
    <string name="server_ip">http://192.168.0.129:3000</string>
</resources>