<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <view
        android:id="@+id/v_titleBar5"
        class="androidx.appcompat.widget.ActionMenuView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#144A7B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/go_back"
        android:elevation="@android:dimen/app_icon_size"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/v_titleBar5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v_titleBar5"
        app:srcCompat="@drawable/arrowleft" />

    <ImageView
        android:id="@+id/btn_refresh"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/refresh"
        app:layout_constraintBottom_toBottomOf="@+id/v_titleBar5"
        app:layout_constraintEnd_toEndOf="@+id/v_titleBar5"
        app:layout_constraintTop_toTopOf="@+id/v_titleBar5"
        app:srcCompat="@drawable/refresh" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/robotobold"
        android:text="@string/orders"
        android:textAppearance="@style/customfontstyleroboto"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_titleBar5" />

</androidx.constraintlayout.widget.ConstraintLayout>