<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/main_btn_sairdoapp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorAccentDark"
        android:fontFamily="@font/robotomedium"
        android:gravity="center|end"
        android:paddingLeft="60dp"
        android:paddingRight="20dp"
        android:text="@string/atv_main_sairdoapp"
        android:textAppearance="@style/customfontstyleroboto"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_btn_entrarcomgoogle"
        android:paddingStart="60dp"
        android:paddingEnd="20dp"  />

    <view
        android:id="@+id/v_titleBar"
        class="android.support.v7.widget.ActionMenuView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_img_logo"
        android:layout_width="91dp"
        android:layout_height="71dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/v_titleBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v_titleBar"
        app:layout_constraintVertical_bias="0.551"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <TextView
        android:id="@+id/main_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacificoregular"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="@+id/v_titleBar"
        app:layout_constraintEnd_toEndOf="@+id/v_titleBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v_titleBar" />

    <TextView
        android:id="@+id/main_tv_aguaegas"
        android:layout_width="198dp"
        android:layout_height="53dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/robotobold"
        android:text="@string/atv_main_aguaegas"
        android:textAppearance="@style/customfontstyleroboto"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_titleBar" />

    <TextView
        android:id="@+id/main_tv_simpleserapido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/robotobold"
        android:text="@string/atv_main_simpleserapido"
        android:textAppearance="@style/customfontstyleroboto"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_aguaegas" />

    <Button
        android:id="@+id/main_btn_entrarcomgoogle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/robotomedium"
        android:gravity="center|end"
        android:paddingLeft="60dp"
        android:paddingRight="20dp"
        android:text="@string/atv_main_entrarcomgoogle"
        android:textAppearance="@style/customfontstyleroboto"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_simpleserapido"
        android:paddingStart="60dp"
        android:paddingEnd="20dp" />

    <ImageView
        android:id="@+id/main_img_google"
        android:layout_width="51dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/atv_main_entrarcomgoogle"
        android:elevation="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="@+id/main_btn_entrarcomgoogle"
        app:layout_constraintStart_toStartOf="@+id/main_btn_entrarcomgoogle"
        app:layout_constraintTop_toTopOf="@+id/main_btn_entrarcomgoogle"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <ImageView
        android:id="@+id/main_img_sair"
        android:layout_width="51dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:contentDescription="@string/atv_main_sairdoapp"
        android:elevation="@android:dimen/app_icon_size"
        app:layout_constraintBottom_toBottomOf="@+id/main_btn_sairdoapp"
        app:layout_constraintStart_toStartOf="@+id/main_btn_sairdoapp"
        app:layout_constraintTop_toTopOf="@+id/main_btn_sairdoapp"
        app:srcCompat="@android:drawable/ic_menu_help" />

</android.support.constraint.ConstraintLayout>